--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
             <h2>My Work</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="images/T1.png/400x300" alt="Poster Design">
+                    <img src="T1.png/400x300" alt="Poster Design">
                     <h3>Poster Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T2.png/400x300" alt="Thumbnail Design">
+                    <img src="T2.png/400x300" alt="Thumbnail Design">
                     <h3>Thumbnail Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T3.png/400x300" alt="Banner Design">
+                    <img src="T3.png/400x300" alt="Banner Design">
                     <h3>Banner Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T4.png/400x300" alt="Logo Design">
+                    <img src="T4.png/400x300" alt="Logo Design">
                     <h3>Logo Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T5.png/400x300" alt="Custom Profile Photo">
+                    <img src="T5.png/400x300" alt="Custom Profile Photo">
                     <h3>Custom Profile Photo</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T6.png/400x300" alt="Ad Graphics">
+                    <img src="T6.png/400x300" alt="Ad Graphics">
                     <h3>Ad Graphics</h3>
                 </div>
             </div>
