--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="content">
                 <div class="badge">
-                    <img src="https://placeholder.com/20x20" alt="Soham Medley Logo" width="20" height="20">
+                    <img src="Soham.png/20x20" alt="Soham Medley Logo" width="20" height="20">
                     <span>Graphic Designer</span>
                 </div>
                 <h1>
