--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <h3>Poster Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T2.png/400x300" alt="Thumbnail Design">
+                    <img src="images/T2.png" alt="Thumbnail Design">
                     <h3>Thumbnail Design</h3>
                 </div>
                 <div class="portfolio-item">
