--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <div class="elegant-shape shape4"></div>
                 <div class="elegant-shape shape5"></div>
             </div>
-            <div class="content">
+           <!-- <div class="content">
                 <div class="badge">
                     <img src="images/Soham.png" alt="Soham Medley Logo" width="20" height="20">
                     <span>Soham Dharap Presents</span>
-                </div>
-                <h1>
+                </div> --!>
+                <h1> 
                     <span class="title1">Soham Medley</span>
                     <br>
                     <span class="title2">Creative Vision</span>
