--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
                 <div class="elegant-shape shape4"></div>
                 <div class="elegant-shape shape5"></div>
             </div>
-           <!-- <div class="content">
+            <div class="content">
                 <div class="badge">
-                    <img src="images/Soham.png" alt="Soham Medley Logo" width="20" height="20">
-                    <span>Soham Dharap Presents</span>
-                </div> --!>
-                <h1> 
+                
+                </div>
+                <h1>
                     <span class="title1">Soham Medley</span>
                     <br>
                     <span class="title2">Creative Vision</span>
@@ -52,27 +51,27 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <img src="images/T1.png" alt="Poster Design">
-                    <h3>Podcast Design</h3>
+                    <h3>Poster Design</h3>
                 </div>
                 <div class="portfolio-item">
                     <img src="images/T2.png" alt="Thumbnail Design">
-                    <h3>Gaming Design</h3>
+                    <h3>Thumbnail Design</h3>
                 </div>
                 <div class="portfolio-item">
                     <img src="images/T3.png" alt="Banner Design">
-                    <h3>Tutorial Design</h3>
+                    <h3>Banner Design</h3>
                 </div>
                 <div class="portfolio-item">
                     <img src="images/T4.png" alt="Logo Design">
-                    <h3>Mashup Design</h3>
+                    <h3>Logo Design</h3>
                 </div>
                 <div class="portfolio-item">
                     <img src="images/T5.png" alt="Custom Profile Photo">
-                    <h3>Rap Design</h3>
+                    <h3>Custom Profile Photo</h3>
                 </div>
                 <div class="portfolio-item">
                     <img src="images/T6.png" alt="Ad Graphics">
-                    <h3>Rap Poster</h3>
+                    <h3>Ad Graphics</h3>
                 </div>
             </div>
         </section>
