--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
             <h2>My Work</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="images/T1.png" alt="Poster Design">
-                    <h3>Poster Design</h3>
+                    <img src="images/T1.png" alt="Podcast Design">
+                    <h3>Podcast Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T2.png" alt="Thumbnail Design">
-                    <h3>Thumbnail Design</h3>
+                    <img src="images/T2.png" alt="Gaming Design">
+                    <h3>Gaming Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T3.png" alt="Banner Design">
-                    <h3>Banner Design</h3>
+                    <img src="images/T3.png" alt="Tutorial Design">
+                    <h3>Tutorial Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T4.png" alt="Logo Design">
-                    <h3>Logo Design</h3>
+                    <img src="images/T4.png" alt="Mashup Design">
+                    <h3>Mashup Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T5.png" alt="Custom Profile Photo">
-                    <h3>Custom Profile Photo</h3>
+                    <img src="images/T5.png" alt="Custom Banner Design">
+                    <h3>Custom Banner Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T6.png" alt="Ad Graphics">
-                    <h3>Ad Graphics</h3>
+                    <img src="images/T6.png" alt="Rap Poster Desgin">
+                    <h3>Rap Poster Desgin</h3>
                 </div>
             </div>
         </section>
