--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soham Medley - Graphic Designer Portfolio</title>
+    <title>Soham Medley - Graphic Designer & Mix-Masterer Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,8 @@
         <nav>
             <a href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="#portfolio">Portfolio</a>
+            <a href="#posters">Posters</a>
+	        <a href="#music">Music</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -43,37 +44,60 @@
 
         <section id="about" class="about">
             <h2>About Me</h2>
-            <p>With 4 years of experience in graphic design, I specialize in creating stunning visuals that captivate and inspire. My passion lies in transforming concepts into beautiful, impactful designs that resonate with audiences.</p>
+            <p>With 4 years of experience in graphic designing & mixing, I specialize in creating stunning visuals providing quality music. My passion lies in transforming concepts into beautiful, impactful outputs that resonate with audiences.</p>
         </section>
 
-        <section id="portfolio" class="portfolio">
+        <section id="posters" class="posters">
             <h2>My Work</h2>
-            <div class="portfolio-grid">
-                <div class="portfolio-item">
+            <div class="posters-grid">
+                <div class="posters-item">
                     <img src="images/T1.png" alt="Podcast Design">
                     <h3>Podcast Design</h3>
                 </div>
-                <div class="portfolio-item">
+                <div class="posters-item">
                     <img src="images/T2.png" alt="Gaming Design">
                     <h3>Gaming Design</h3>
                 </div>
-                <div class="portfolio-item">
+                <div class="posters-item">
                     <img src="images/T3.png" alt="Tutorial Design">
                     <h3>Tutorial Design</h3>
                 </div>
-                <div class="portfolio-item">
+                <div class="posters-item">
                     <img src="images/T4.png" alt="Mashup Design">
                     <h3>Mashup Design</h3>
                 </div>
-                <div class="portfolio-item">
+                <div class="posters-item">
                     <img src="images/T5.png" alt="Custom Banner Design">
                     <h3>Custom Banner Design</h3>
                 </div>
-                <div class="portfolio-item">
+                <div class="posters-item">
                     <img src="images/T6.png" alt="Rap Poster Desgin">
                     <h3>Rap Poster Desgin</h3>
                 </div>
             </div>
+        </section>
+
+<section id="music" class="music">
+            <h2>Music Production (Mixing & Mastering)</h2>
+            <div class="music-grid">
+                <p>Here you can find examples of my mixing and mastering work.  Click to download:</p>
+
+                <div class="music-item">
+                    <h3>Track 1 Title</h3>
+                    <audio controls>
+                        <source src="music/LAKSHAY_REMIX_2025__2.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                    <a href="music/track1.mp3" download>Download</a>  </div>
+                <div class="music-item">
+                    <h3>Track 2 Title</h3>
+                    <audio controls>
+                        <source src="music/(Smooth) LAKSHAY_REMIX_2.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                    <a href="music/track2.mp3" download>Download</a>
+                </div>
+                 </div>
         </section>
 
         <section id="contact" class="contact">
@@ -90,4 +114,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
