--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
                 <p>Here you can find examples of my mixing and mastering work.  Click to download:</p>
 
                 <div class="music-item">
-                    <h3>Track 1 Title</h3>
+                    <h3>LAKSHAY_REMIX_2025__2.wav</h3>
                     <audio controls>
-                        <source src="music/track1.mp3" type="audio/mpeg">
+                        <source src="music/LAKSHAY_REMIX_2025__2.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                     <a href="music/track1.mp3" download>Download</a>  </div>
                 <div class="music-item">
-                    <h3>Track 2 Title</h3>
+                    <h3>(Smooth) LAKSHAY_REMIX_2.wav</h3>
                     <audio controls>
-                        <source src="music/track2.mp3" type="audio/mpeg">
+                        <source src="music/(Smooth) LAKSHAY_REMIX_2.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                     <a href="music/track2.mp3" download>Download</a>
