--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
                 <div class="music-item">
                     <h3>LAKSHAY_REMIX_2025__2.wav</h3>
                     <audio controls>
-                        <source src="music/LAKSHAY_REMIX_2025__2.wav" type="audio/mpeg">
-                        Your browser does not support the audio element.
+                        <source src="music/LAKSHAY_REMIX_2025__2.wav" type="audio/wav">
+                  
                     </audio>
                     <a href="music/track1.mp3" download>Download</a>  </div>
                 <div class="music-item">
                     <h3>(Smooth) LAKSHAY_REMIX_2.wav</h3>
                     <audio controls>
-                        <source src="music/(Smooth) LAKSHAY_REMIX_2.wav" type="audio/mpeg">
-                        Your browser does not support the audio element.
+                        <source src="music/(Smooth) LAKSHAY_REMIX_2.wav" type="audio/wav">
+                  
                     </audio>
                     <a href="music/track2.mp3" download>Download</a>
                 </div>
