--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
                 <p>Here you can find examples of my mixing and mastering work.  Click to download:</p>
 
                 <div class="music-item">
-                    <h3>LAKSHAY_REMIX_2025__2.wav</h3>
+                    <h3>LAKSHAY REMIX 2</h3>
                     <audio controls>
                         <source src="music/LAKSHAY_REMIX_2025__2.wav" type="audio/wav">
                   
                     </audio>
                     <a href="music/track1.mp3" download>Download</a>  </div>
                 <div class="music-item">
-                    <h3>(Smooth) LAKSHAY_REMIX_2.wav</h3>
+                    <h3>(Smooth) LAKSHAY REMIX 2</h3>
                     <audio controls>
                         <source src="music/(Smooth) LAKSHAY_REMIX_2.wav" type="audio/wav">
                   
