--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                     <br>
                     <span class="title2">Creative Vision</span>
                 </h1>
-                <p>Transforming ideas into captivating visual experiences. 4 years of bringing beautiful designs to life.</p>
+                <p>Turning ideas into captivating visual experiences while also specializing in mixing and mastering. With 4 years of crafting beautiful designs and sound.</p>
             </div>
             <div class="overlay-gradient"></div>
         </section>
 
         <section id="about" class="about">
             <h2>About Me</h2>
-            <p>With 4 years of experience in graphic design, I specialize in creating stunning visuals that captivate and inspire. My passion lies in transforming concepts into beautiful, impactful designs that resonate with audiences.</p>
+            <p>With 4 years of experience in graphic design, I specialize in creating stunning visuals that captivate and inspire. Alongside my design expertise, I also excel in mixing and mastering, transforming concepts into beautiful, impactful creations that resonate with audiences.</p>
         </section>
 
         <section id="portfolio" class="portfolio">
