--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
         </section>
 
         <section id="about" class="about">
-            <h2>About Me</h2>
-            <p>With 4 years of experience in graphic design, I specialize in creating stunning visuals that captivate and inspire. Alongside my design expertise, I also excel in mixing and mastering, transforming concepts into beautiful, impactful creations that resonate with audiences.</p>
-        </section>
+    <h2>About Me</h2>
+    <p style="text-align: justify;">
+        With 4 years of experience in graphic design, I specialize in creating stunning visuals that captivate and inspire. Alongside my design expertise, I also excel in mixing and mastering, transforming concepts into beautiful, impactful creations that resonate with audiences.
+    </p>
+</section>
+
 
         <section id="portfolio" class="portfolio">
             <h2>My Work</h2>
