--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="overlay-gradient"></div>
         </section>
 
-        <<section id="about" class="about">
+        <section id="about" class="about">
             <h2>About Me</h2>
             <p>With 4 years of experience in graphic design, I specialize in creating stunning visuals that captivate and inspire. Alongside my design expertise, I also excel in mixing and mastering, transforming concepts into beautiful, impactful creations that resonate with audiences.</p>
         </section>
