--- a/index.html
+++ b/index.html
@@ -52,28 +52,36 @@
             <h2>My Work</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="images/T1.png" alt="Podcast Design">
+                    <img src="images/Podcast.png" alt="Podcast Design">
                     <h3>Podcast Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T2.png" alt="Gaming Design">
-                    <h3>Gaming Design</h3>
+                    <img src="images/Gaming1.png" alt="Gaming Live Stream Design">
+                    <h3>Gaming Live Stream Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T3.png" alt="Tutorial Design">
-                    <h3>Tutorial Design</h3>
+                    <img src="images/Gaming2.png" alt="Gaming Video Design">
+                    <h3>Gaming Video Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T4.png" alt="Mashup Design">
+                    <img src="images/Mashup.png" alt="Mashup Design">
                     <h3>Mashup Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T5.png" alt="Custom Banner Design">
+                    <img src="images/Banner.png" alt="Custom Banner Design">
                     <h3>Custom Banner Design</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/T6.png" alt="Rap Poster Desgin">
+                    <img src="images/Rap.png" alt="Rap Poster Desgin">
                     <h3>Rap Poster Desgin</h3>
+                </div>
+ 		<div class="portfolio-item">
+                    <img src="images/Reaction.png" alt="Reaction Video/Stream Desgin">
+                    <h3>Reaction Video/Stream Desgin</h3>
+                </div>
+		  <div class="portfolio-item">
+                    <img src="images/Tutorial.png" alt="Course/Tutorial Desgin">
+                    <h3>Course/Tutorial Desgin</h3>
                 </div>
             </div>
         </section>
