--- a/index.html
+++ b/index.html
@@ -80,8 +80,12 @@
                     <h3>Reaction Video/Stream Desgin</h3>
                 </div>
 		  <div class="portfolio-item">
-                    <img src="images/Tutorial.png" alt="Course/Tutorial Desgin">
-                    <h3>Course/Tutorial Desgin</h3>
+                    <img src="images/Course.png" alt="Course Desgin">
+                    <h3>Course Desgin</h3>
+                </div>
+		<div class="portfolio-item">
+                    <img src="images/Tutorial.png" alt="Tutorial Desgin">
+                    <h3>Tutorial Desgin</h3>
                 </div>
             </div>
         </section>
