--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soham Medley Portfolio</title>
+    <title>Dzyns by Soham</title>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,7 +13,7 @@
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#portfolio">Portfolio</a>
-	    <a href="#music">Music</a>
+	  <!--  <a href="#music">Music</a> -->
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -33,7 +33,7 @@
                 
                 </div>
                 <h1>
-                    <span class="title1">Soham Medley</span>
+                    <span class="title1">Dzyns by Soham</span>
                     <br>
                     <span class="title2">Creative Vision</span>
                 </h1>
@@ -48,80 +48,172 @@
         </section>
 
 
-        <section id="portfolio" class="portfolio">
-            <h2>My Work</h2>
-            <div class="portfolio-grid">
-                <div class="portfolio-item">
-                    <img src="images/Podcast.png" alt="Podcast Design">
-                    <h3>Podcast Design</h3>
-                </div>
-                <div class="portfolio-item">
-                    <img src="images/Gaming1.png" alt="Gaming Live Stream Design">
-                    <h3>Gaming Live Stream Design</h3>
-                </div>
-                <div class="portfolio-item">
-                    <img src="images/Gaming2.png" alt="Gaming Video Design">
-                    <h3>Gaming Video Design</h3>
-                </div>
-		<div class="portfolio-item">
-                    <img src="images/Banner.png" alt="Custom Banner Design">
-                    <h3>Custom Banner Design</h3>
-                </div>
-                <div class="portfolio-item">
-                    <img src="images/Mashup.png" alt="Mashup Design">
-                    <h3>Mashup Design</h3>
-                </div>
-                <div class="portfolio-item">
-                    <img src="images/Rap.png" alt="Rap Poster Desgin">
-                    <h3>Rap Poster Desgin</h3>
-                </div>
- 		<div class="portfolio-item">
-                    <img src="images/Reaction.png" alt="Reaction Video/Stream Desgin">
-                    <h3>Reaction Video/Stream Desgin</h3>
-                </div>
-		  <div class="portfolio-item">
-                    <img src="images/Course.png" alt="Course Desgin">
-                    <h3>Course Desgin</h3>
-                </div>
-		<div class="portfolio-item">
-                    <img src="images/Tutorial.png" alt="Tutorial Desgin">
-                    <h3>Tutorial Desgin</h3>
-                </div>
+       <section id="portfolio" class="portfolio">
+    <h2>My Portfolio</h2>
+
+    <div class="portfolio-section">
+        <h3>Podcast Designs</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="images/Podcast1.png" alt="Podcast Design">
+                <h3>Podcast Design</h3>
             </div>
-        </section>
+            <div class="portfolio-item">
+                <img src="images/Podcast2.png" alt="Podcast Design">
+                <h3>Podcast Stream Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Podcast3.png" alt="Podcast Design">
+                <h3>Podcast Design</h3>
+            </div>
+        </div>
+    </div>
 
+<div class="portfolio-section">
+        <h3>Gaming Designs</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="images/Gaming1.png" alt="Gaming Design">
+                <h3>Gaming Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Gaming2.png" alt="Gaming Design">
+                <h3>Gaming Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Gaming3.png" alt="Gaming Design">
+                <h3>Gaming Design</h3>
+            </div>
+        </div>
+    </div>
+
+<div class="portfolio-section">
+        <h3>Tech Review Designs</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="images/Tech1.png" alt="Tech Review Design">
+                <h3>Tech Review Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Tech2.png" alt="Tech Review Design">
+                <h3>Tech Review Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Tech3.png" alt="Tech Review Design">
+                <h3>Tech Review Design</h3>
+            </div>
+        </div>
+    </div>
+
+
+<div class="portfolio-section">
+        <h3>Finance Designs</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="images/Fin1.png" alt="Finance Design">
+                <h3>Finance Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Fin2.png" alt="Finance Design">
+                <h3>Finance Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Fin3.png" alt="Finance Design">
+                <h3>Finance Design</h3>
+            </div>
+        </div>
+    </div>
+
+<div class="portfolio-section">
+        <h3>Educational Designs</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="images/Edu1.png" alt="Educational Design">
+                <h3>Programming Course Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Edu2.png" alt="Educational Design">
+                <h3>Cricket Analysis Video Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Edu3.png" alt="Educational Design">
+                <h3>Educational Design</h3>
+            </div>
+        </div>
+    </div>
+
+<div class="portfolio-section">
+        <h3>Vlog Designs</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="images/Vlog1.png" alt="Vlog Design">
+                <h3>Vlog Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Vlog2.png" alt="Vlog Design">
+                <h3>Vlog Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Vlog3.png" alt="Vlog Design">
+                <h3>Vlog Design</h3>
+            </div>
+        </div>
+    </div>
+
+<div class="portfolio-section">
+        <h3>Rap/Music Poster Designs</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="images/Rap1.png" alt="Rap/Music Poster Design">
+                <h3>Rap Poster Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Rap2.png" alt="Rap/Music Poster Design">
+                <h3>Mashup poster Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Rap3.png" alt="Rap/Music Poster Design">
+                <h3>Rap Banner Design</h3>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--
 <section id="music" class="music">
-            <h2>Music Production (Mixing & Mastering)</h2>
-            <div class="music-grid">
-                <p>Here you can find examples of my mixing and mastering work.  Click to download:</p>
+    <h2>Music Production (Mixing & Mastering)</h2>
+    <div class="music-grid">
+        <p>Here you can find examples of my mixing and mastering work. Click to download:</p>
 
-                <div class="music-item">
-                    <h3>LAKSHAY REMIX 2</h3>
-                    <audio controls>
-                        <source src="music/LAKSHAY_REMIX_2025__2.wav" type="audio/wav">
-                    </audio>
-                    <a href="music/LAKSHAY_REMIX_2025__2.wav" download>Download</a>  
-		</div>
-		    
-                <div class="music-item">
-                    <h3>(Smooth) LAKSHAY REMIX 2</h3>
-                    <audio controls>
-                        <source src="music/(Smooth) LAKSHAY_REMIX_2.wav" type="audio/wav">
-                    </audio>
-                    <a href="music/(Smooth) LAKSHAY_REMIX_2.wav" download>Download</a>
-                </div>
-                 </div>
-        </section>
+        <div class="music-item">
+            <h3>LAKSHAY REMIX 2</h3>
+            <audio controls>
+                <source src="music/LAKSHAY_REMIX_2025__2.wav" type="audio/wav">
+            </audio>
+            <a href="music/LAKSHAY_REMIX_2025__2.wav" download>Download</a>  
+        </div>
+
+        <div class="music-item">
+            <h3>(Smooth) LAKSHAY REMIX 2</h3>
+            <audio controls>
+                <source src="music/(Smooth) LAKSHAY_REMIX_2.wav" type="audio/wav">
+            </audio>
+            <a href="music/(Smooth) LAKSHAY_REMIX_2.wav" download>Download</a>
+        </div>
+    </div>
+</section>
+-->
+
 
         <section id="contact" class="contact">
             <h2>Get in Touch</h2>
             <p>Ready to bring your ideas to life? Let's create something amazing together!</p>
-            <a href="https://www.instagram.com/sohammedleyofficial" class="cta-button">Contact Me on Instagram</a>
+            <a href="https://www.instagram.com/dzynsbysoham" class="cta-button">Contact Me on Instagram</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Soham Medley. All rights reserved.</p>
+        <p>&copy; 2025 DzynsbySoham. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
