--- a/index.html
+++ b/index.html
@@ -88,6 +88,24 @@
     </div>
 
 <div class="portfolio-section">
+        <h3>Hiphop Content Designs</h3>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="images/Hiphop1.png" alt="Hiphop Design">
+                <h3>Rap Reaction Video Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Hiphop2.png" alt="Hiphop Design">
+                <h3>Rap Live Stream Design</h3>
+            </div>
+            <div class="portfolio-item">
+                <img src="images/Hiphop3.png" alt="Hiphop Design">
+                <h3>Rap Debate Stream Design</h3>
+            </div>
+        </div>
+    </div>
+
+<div class="portfolio-section">
         <h3>Tech Review Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
