--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Podcast1.png" alt="Podcast Design">
-                <h2>Podcast Design</h2>
+                <h4>Podcast Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Podcast2.png" alt="Podcast Design">
-                <h2>Podcast Stream Design</h2>
+                <h4>Podcast Stream Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Podcast3.png" alt="Podcast Design">
-                <h2>Podcast Design</h2>
+                <h4>Podcast Design</h4>
             </div>
         </div>
     </div>
@@ -74,15 +74,15 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Gaming1.png" alt="Gaming Design">
-                <h2>Gaming Design</h2>
+                <h4>Gaming Montage Video Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Gaming2.png" alt="Gaming Design">
-                <h2>Gaming Design</h2>
+                <h4>Gaming Live Stream Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Gaming3.png" alt="Gaming Design">
-                <h2>Gaming Design</h2>
+                <h4>Gaming Live Stream Design</h4>
             </div>
         </div>
     </div>
@@ -92,15 +92,15 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Hiphop1.png" alt="Hiphop Design">
-                <h2>Rap Reaction Video Design</h2>
+                <h4>Rap Reaction Video Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Hiphop2.png" alt="Hiphop Design">
-                <h2>Rap Live Stream Design</h2>
+                <h4>Rap Live Stream Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Hiphop3.png" alt="Hiphop Design">
-                <h2>Rap Debate Stream Design</h2>
+                <h4>Rap Debate Stream Design</h4>
             </div>
         </div>
     </div>
@@ -110,15 +110,15 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Tech1.png" alt="Tech Review Design">
-                <h2>Tech Review Design</h2>
+                <h4>Tech Review Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Tech2.png" alt="Tech Review Design">
-                <h2>Tech Review Design</h2>
+                <h4>Tech Review Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Tech3.png" alt="Tech Review Design">
-                <h2>Tech Review Design</h2>
+                <h4>Tech Review Design</h4>
             </div>
         </div>
     </div>
@@ -129,15 +129,15 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Fin1.png" alt="Finance Design">
-                <h2>Finance Design</h2>
+                <h4>Finance Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Fin2.png" alt="Finance Design">
-                <h2>Finance Design</h2>
+                <h4>Finance Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Fin3.png" alt="Finance Design">
-                <h2>Finance Design</h2>
+                <h4>Finance Design</h4>
             </div>
         </div>
     </div>
@@ -147,15 +147,15 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Edu1.png" alt="Educational Design">
-                <h2>Programming Course Design</h2>
+                <h4>Programming Course Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Edu2.png" alt="Educational Design">
-                <h2>Cricket Analysis Video Design</h2>
+                <h4>Cricket Analysis Video Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Edu3.png" alt="Educational Design">
-                <h2>Educational Design</h2>
+                <h4>Educational Design</h4>
             </div>
         </div>
     </div>
@@ -165,15 +165,15 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Vlog1.png" alt="Vlog Design">
-                <h2>Vlog Design</h2>
+                <h4>Vlog Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Vlog2.png" alt="Vlog Design">
-                <h2>Vlog Design</h2>
+                <h4>Vlog Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Vlog3.png" alt="Vlog Design">
-                <h2>Vlog Design</h2>
+                <h4>Vlog Design</h4>
             </div>
         </div>
     </div>
@@ -183,15 +183,15 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Rap1.png" alt="Rap/Music Poster Design">
-                <h2>Rap Poster Design</h2>
+                <h4>Rap Poster Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Rap2.png" alt="Rap/Music Poster Design">
-                <h2>Mashup poster Design</h2>
+                <h4>Mashup poster Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Rap3.png" alt="Rap/Music Poster Design">
-                <h2>Rap Banner Design</h2>
+                <h4>Rap Banner Design</h4>
             </div>
         </div>
     </div>
