--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h2>My Portfolio</h2>
 
     <div class="portfolio-section">
-        <h3>Podcast Designs</h3>
+        <h3>|Podcast Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Podcast1.png" alt="Podcast Design">
@@ -70,7 +70,7 @@
     </div>
 
 <div class="portfolio-section">
-        <h3>Gaming Designs</h3>
+        <h3>|Gaming Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Gaming1.png" alt="Gaming Design">
@@ -88,7 +88,7 @@
     </div>
 
 <div class="portfolio-section">
-        <h3>Hiphop Content Designs</h3>
+        <h3>|Hiphop Content Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Hiphop1.png" alt="Hiphop Design">
@@ -106,7 +106,7 @@
     </div>
 
 <div class="portfolio-section">
-        <h3>Tech Review Designs</h3>
+        <h3>|Tech Review Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Tech1.png" alt="Tech Review Design">
@@ -125,7 +125,7 @@
 
 
 <div class="portfolio-section">
-        <h3>Finance Designs</h3>
+        <h3>|Finance Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Fin1.png" alt="Finance Design">
@@ -143,7 +143,7 @@
     </div>
 
 <div class="portfolio-section">
-        <h3>Educational Designs</h3>
+        <h3>|Educational Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Edu1.png" alt="Educational Design">
@@ -161,7 +161,7 @@
     </div>
 
 <div class="portfolio-section">
-        <h3>Vlog Designs</h3>
+        <h3>|Vlog Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Vlog1.png" alt="Vlog Design">
@@ -179,7 +179,7 @@
     </div>
 
 <div class="portfolio-section">
-        <h3>Rap/Music Poster Designs</h3>
+        <h3>|Rap/Music Poster Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Rap1.png" alt="Rap/Music Poster Design">
