--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
         </div>
     </div>
-
+<br>
 <div class="portfolio-section">
         <h3>| Gaming Designs</h3>
         <div class="portfolio-grid">
@@ -86,7 +86,7 @@
             </div>
         </div>
     </div>
-
+<br>
 <div class="portfolio-section">
         <h3>| Hiphop Content Designs</h3>
         <div class="portfolio-grid">
@@ -104,7 +104,7 @@
             </div>
         </div>
     </div>
-
+<br>
 <div class="portfolio-section">
         <h3>| Tech Review Designs</h3>
         <div class="portfolio-grid">
@@ -122,8 +122,7 @@
             </div>
         </div>
     </div>
-
-
+<br>
 <div class="portfolio-section">
         <h3>| Finance Designs</h3>
         <div class="portfolio-grid">
@@ -141,7 +140,7 @@
             </div>
         </div>
     </div>
-
+<br>
 <div class="portfolio-section">
         <h3>| Educational Designs</h3>
         <div class="portfolio-grid">
@@ -159,7 +158,7 @@
             </div>
         </div>
     </div>
-
+<br>
 <div class="portfolio-section">
         <h3>| Vlog Designs</h3>
         <div class="portfolio-grid">
@@ -177,7 +176,7 @@
             </div>
         </div>
     </div>
-
+<br>
 <div class="portfolio-section">
         <h3>| Rap/Music Poster Designs</h3>
         <div class="portfolio-grid">
@@ -187,7 +186,7 @@
             </div>
             <div class="portfolio-item">
                 <img src="images/Rap2.png" alt="Rap/Music Poster Design">
-                <h4>Mashup poster Design</h4>
+                <h4>Mashup Poster Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Rap3.png" alt="Rap/Music Poster Design">
