--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="portfolio-item">
                 <img src="images/Podcast2.png" alt="Podcast Design">
-                <h4>Podcast Stream Design</h4>
+                <h4>Podcast Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Podcast3.png" alt="Podcast Design">
