--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
 
         <section id="about" class="about">
             <h2>About Me</h2>
-            <p>With 4 years of experience in graphic design, I specialize in creating stunning visuals that captivate and inspire. Alongside my design expertise, I also excel in mixing and mastering, transforming concepts into beautiful, impactful creations that resonate with audiences.</p>
+            <p>Welcome to <b>Dzyns by Soham</b> where creativity meets precision! With <u>3+</u> years of experience, I specialize in crafting <i>stunning, high-impact </i>designs that grab attention and leave a lasting impression. <br><br>
+
+<b> What I Do:</b><br>
+🎨 <u>Eye-Catching Designs</u> – From posters to thumbnails, each piece is designed to captivate.<br>
+🔹 <u>Brand Identity & Aesthetics</u> – Elevating your brand with visuals that truly represent its essence.<br>
+📱 <u>Social Media Graphics</u> – Creating content that stops the scroll and demands attention.<br>
+🖌️ <u>Creative & Strategic Approach</u> – Every pixel is placed with precision and intent.<br>
+📢 <u>Designs That Speak</u> – More than just visuals; every design tells a story.<br>
+</p>
         </section>
 
 
@@ -196,30 +204,7 @@
     </div>
 </section>
 
-<!--
-<section id="music" class="music">
-    <h2>Music Production (Mixing & Mastering)</h2>
-    <div class="music-grid">
-        <p>Here you can find examples of my mixing and mastering work. Click to download:</p>
 
-        <div class="music-item">
-            <h3>LAKSHAY REMIX 2</h3>
-            <audio controls>
-                <source src="music/LAKSHAY_REMIX_2025__2.wav" type="audio/wav">
-            </audio>
-            <a href="music/LAKSHAY_REMIX_2025__2.wav" download>Download</a>  
-        </div>
-
-        <div class="music-item">
-            <h3>(Smooth) LAKSHAY REMIX 2</h3>
-            <audio controls>
-                <source src="music/(Smooth) LAKSHAY_REMIX_2.wav" type="audio/wav">
-            </audio>
-            <a href="music/(Smooth) LAKSHAY_REMIX_2.wav" download>Download</a>
-        </div>
-    </div>
-</section>
--->
 
 
         <section id="contact" class="contact">
