--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 DzynsbySoham. All rights reserved.</p>
+        <p>&copy; 2025 dzynsbysoham. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
