--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
                 <img src="images/Podcast1.png" alt="Podcast Design">
                 <h4>Podcast Design</h4>
             </div>
-            <div class="portfolio-item">
+           <!-- <div class="portfolio-item">
                 <img src="images/Podcast2.png" alt="Podcast Design">
                 <h4>Podcast Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Podcast3.png" alt="Podcast Design">
                 <h4>Podcast Design</h4>
-            </div>
+        -->    </div>
         </div>
     </div>
 <br>
@@ -120,18 +120,18 @@
                 <img src="images/Tech1.png" alt="Tech Review Design">
                 <h4>Tech Review Design</h4>
             </div>
-            <div class="portfolio-item">
+          <!--  <div class="portfolio-item">
                 <img src="images/Tech2.png" alt="Tech Review Design">
                 <h4>Tech Review Design</h4>
             </div>
             <div class="portfolio-item">
                 <img src="images/Tech3.png" alt="Tech Review Design">
                 <h4>Tech Review Design</h4>
-            </div>
+         -->   </div>
         </div>
     </div>
 <br>
-<div class="portfolio-section">
+<!--<div class="portfolio-section">
         <h3>| Finance Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
@@ -147,7 +147,7 @@
                 <h4>Finance Design</h4>
             </div>
         </div>
-    </div>
+   --> </div>
 <br>
 <div class="portfolio-section">
         <h3>| Educational Designs</h3>
@@ -167,7 +167,7 @@
         </div>
     </div>
 <br>
-<div class="portfolio-section">
+<!--<div class="portfolio-section">
         <h3>| Vlog Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
@@ -183,7 +183,7 @@
                 <h4>Vlog Design</h4>
             </div>
         </div>
-    </div>
+ -->   </div>
 <br>
 <div class="portfolio-section">
         <h3>| Rap/Music Poster Designs</h3>
