--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
     <h2>My Portfolio</h2>
 
     <div class="portfolio-section">
-        <h3>| Podcast Designs</h3>
+        <h3>| Vlog Designs</h3>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img src="images/Podcast1.png" alt="Podcast Design">
-                <h4>Podcast Design</h4>
+                <img src="images/Vlog1.png" alt="Vlog Design">
+                <h4>Regular Vlog Design</h4>
             </div>
-           <!-- <div class="portfolio-item">
-                <img src="images/Podcast2.png" alt="Podcast Design">
-                <h4>Podcast Design</h4>
+           <div class="portfolio-item">
+                <img src="images/Vlog2.png" alt="Vlog Design">
+                <h4>Concept Vlog Design</h4>
             </div>
-            <div class="portfolio-item">
-                <img src="images/Podcast3.png" alt="Podcast Design">
-                <h4>Podcast Design</h4>
+         <!--    <div class="portfolio-item">
+                <img src="images/Vlog3.png" alt="Vlog Design">
+                <h4>Vlog Design</h4>
         -->    </div>
         </div>
     </div>
@@ -118,12 +118,12 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="images/Tech1.png" alt="Tech Review Design">
-                <h4>Tech Review Design</h4>
+                <h4>Laptop Review Design</h4>
             </div>
-          <!--  <div class="portfolio-item">
+          <div class="portfolio-item">
                 <img src="images/Tech2.png" alt="Tech Review Design">
-                <h4>Tech Review Design</h4>
-            </div>
+                <h4>AudioTool Review Design</h4>
+           <!--   </div>
             <div class="portfolio-item">
                 <img src="images/Tech3.png" alt="Tech Review Design">
                 <h4>Tech Review Design</h4>
